objects/BMCServiceDesk__BMC_UserCommunity__c.object
<CustomObject>
    <description>BMC_UserCommunity. CMDB Class that stores information about a collection of users (persons) who consume business services. Typically, the users are external to the organization or they cross organizational boundaries. While BMC_Role and BMC_Organization CIs represent official designations within your business, CIs that you populate within the BMC_UserCommunity class can be more informal. For example, you might group internet users in this class to represent a broad audience.   The BMC_UserCommunity class will be deprecated in a future release. You should instead use BMC_Organization or BMC_ConcreteCollection to model users who consume business services.  The BMC_UserCommunity class has no corresponding DMTF CIM class.</description>
    <fields>
        <fullName>BMCServiceDesk__Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SPOC__c</fullName>
        <label>SPOC</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>User Community</label>
    <nameField>
        <label>BMC_UserCommunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Communities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>